# Cryptography-final-project

./: .gitignore  .latexmkrc  CLAUDE.md  GIVE_TO_AGENT.md  README.md  details.md  pyproject.toml
Archive/: conference_101719.tex  references.bib
data/processed/: test.csv  test_features.csv  train_features.csv  val.csv  val_features.csv
docs/journal_paper/: journal_paper.tex  references.bib
docs/journal_paper/_latexmk/: journal_paper.aux  journal_paper.bbl  journal_paper.bcf  journal_paper.blg  journal_paper.fdb_latexmk  journal_paper.fls  journal_paper.out  journal_paper.run.xml  journal_paper.xdv
docs/journal_paper/figs/: draw_feature_pipeline.py  draw_results.py  draw_system_overview.py
docs/journal_paper/sections/: abstract.tex  conclusion.tex  data_and_features.tex  discussion.tex  experiments.tex  introduction.tex  methodology.tex  related_work.tex  threat_model.tex
docs/preliminary_study/: preliminary_study.fdb_latexmk  preliminary_study.fls  preliminary_study.tex  references.bib
docs/preliminary_study/_latexmk/: preliminary_study.aux  preliminary_study.bbl  preliminary_study.bcf  preliminary_study.blg  preliminary_study.fdb_latexmk  preliminary_study.fls  (+3 more)
docs/presentation/: .latexmkrc  presentation.nav  presentation.out  presentation.tex  presentation.toc  references.bib  teleprompter.tex
models/: ablation_results.csv  baselines_comparison.csv  best_model.pkl  multiseed_results.csv
src/: cli.py
src/data/: generator.py  preprocessor.py
src/features/: engineer.py
src/models/: ablation.py  baselines.py  evaluate.py  multiseed_eval.py  train.py
(+55 files in other folders)
