[project]
name = "malware-detection-smartgrid"
version = "0.1.0"
description = "AI-driven malware detection via Windows Event Log engineering in smart grid control systems"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.25",
    "scikit-learn>=1.4",
    "scipy>=1.11",
    "graphviz>=0.20",
    "click>=8.1",
    "matplotlib>=3.8",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "ruff>=0.15.13",
]
